--- a/src/main/webapp/reports/oith.jrxml
+++ b/src/main/webapp/reports/oith.jrxml
@@ -21,12 +21,12 @@
 		<band height="107" splitType="Stretch">
 			<image>
 				<reportElement uuid="972e8768-44c8-4fc0-9427-3824185dbda8" x="0" y="0" width="205" height="83"/>
-				<imageExpression><![CDATA["D:\\_OITH_PROJECT_NAME\\src\\main\\webapp\\repositories\\reports\\oith_logo.png"]]></imageExpression>
+				<imageExpression><![CDATA["/var/lib/tomcat7/webapps/oith_ws_web/reports/oith_logo.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="98e37145-6d17-4b72-80aa-8bb853952838" x="333" y="45" width="100" height="26" forecolor="#3333FF"/>
+				<reportElement uuid="98e37145-6d17-4b72-80aa-8bb853952838" x="303" y="45" width="169" height="26" forecolor="#FF0000"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Arial Narrow" size="18" isBold="true"/>
+					<font fontName="Lucida Sans" size="18" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[Report Title]]></text>
 			</staticText>
@@ -35,7 +35,7 @@
 	<columnHeader>
 		<band height="20" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="b27f76f5-1784-4536-a0f4-8e87fda7ed03" mode="Opaque" x="0" y="0" width="111" height="20" backcolor="#CCCCCC"/>
+				<reportElement uuid="b27f76f5-1784-4536-a0f4-8e87fda7ed03" mode="Opaque" x="0" y="0" width="111" height="20" forecolor="#000000" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -44,12 +44,12 @@
 					<rightPen lineWidth="0.25"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[accessPath]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="01147733-bce3-48e5-9b91-437559ae0384" mode="Opaque" x="111" y="0" width="111" height="20" backcolor="#CCCCCC"/>
+				<reportElement uuid="01147733-bce3-48e5-9b91-437559ae0384" mode="Opaque" x="111" y="0" width="111" height="20" forecolor="#000000" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -58,12 +58,12 @@
 					<rightPen lineWidth="0.25"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[address]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="79d4a04e-29f8-4bd8-8746-3667b5662cd9" mode="Opaque" x="222" y="0" width="111" height="20" backcolor="#CCCCCC"/>
+				<reportElement uuid="79d4a04e-29f8-4bd8-8746-3667b5662cd9" mode="Opaque" x="222" y="0" width="111" height="20" forecolor="#000000" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -72,12 +72,12 @@
 					<rightPen lineWidth="0.25"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[code]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="9e664d81-0d39-41e8-a138-bdeedaf8721f" mode="Opaque" x="333" y="0" width="111" height="20" backcolor="#CCCCCC"/>
+				<reportElement uuid="9e664d81-0d39-41e8-a138-bdeedaf8721f" mode="Opaque" x="333" y="0" width="111" height="20" forecolor="#000000" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -86,12 +86,12 @@
 					<rightPen lineWidth="0.25"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[menuType]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="5269dde2-2924-425c-852b-9b9a915504b1" mode="Opaque" x="444" y="0" width="111" height="20" backcolor="#CCCCCC"/>
+				<reportElement uuid="5269dde2-2924-425c-852b-9b9a915504b1" mode="Opaque" x="444" y="0" width="111" height="20" forecolor="#000000" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -100,7 +100,7 @@
 					<rightPen lineWidth="0.25"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[text]]></text>
 			</staticText>
@@ -109,7 +109,7 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement uuid="4520757c-7442-4ac0-95aa-52477b509af2" x="0" y="0" width="111" height="20"/>
+				<reportElement uuid="4520757c-7442-4ac0-95aa-52477b509af2" x="0" y="0" width="111" height="20" forecolor="#000000"/>
 				<box leftPadding="3">
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -117,11 +117,13 @@
 					<bottomPen lineWidth="0.25"/>
 					<rightPen lineWidth="0.25"/>
 				</box>
-				<textElement/>
+				<textElement>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{accessPath}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="0f183ae3-8076-4524-b40b-bac2a03b8ed9" x="111" y="0" width="111" height="20"/>
+				<reportElement uuid="0f183ae3-8076-4524-b40b-bac2a03b8ed9" x="111" y="0" width="111" height="20" forecolor="#000000"/>
 				<box leftPadding="3">
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -129,11 +131,13 @@
 					<bottomPen lineWidth="0.25"/>
 					<rightPen lineWidth="0.25"/>
 				</box>
-				<textElement/>
+				<textElement>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="4ee270e7-149a-43be-a57a-7f4c7ada6462" x="222" y="0" width="111" height="20"/>
+				<reportElement uuid="4ee270e7-149a-43be-a57a-7f4c7ada6462" x="222" y="0" width="111" height="20" forecolor="#000000"/>
 				<box leftPadding="3">
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -141,11 +145,13 @@
 					<bottomPen lineWidth="0.25"/>
 					<rightPen lineWidth="0.25"/>
 				</box>
-				<textElement/>
+				<textElement>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{code}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="1cc9f0fa-0a9f-4b58-a3aa-5f5c70146070" x="333" y="0" width="111" height="20"/>
+				<reportElement uuid="1cc9f0fa-0a9f-4b58-a3aa-5f5c70146070" x="333" y="0" width="111" height="20" forecolor="#000000"/>
 				<box leftPadding="3">
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -153,11 +159,13 @@
 					<bottomPen lineWidth="0.25"/>
 					<rightPen lineWidth="0.25"/>
 				</box>
-				<textElement/>
+				<textElement>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{menuType}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="92684a73-5db7-48d8-b78a-1513e2df534f" x="444" y="0" width="111" height="20"/>
+				<reportElement uuid="92684a73-5db7-48d8-b78a-1513e2df534f" x="444" y="0" width="111" height="20" forecolor="#000000"/>
 				<box leftPadding="3">
 					<pen lineWidth="0.25"/>
 					<topPen lineWidth="0.25"/>
@@ -165,7 +173,9 @@
 					<bottomPen lineWidth="0.25"/>
 					<rightPen lineWidth="0.25"/>
 				</box>
-				<textElement/>
+				<textElement>
+					<font fontName="Lucida Sans" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{text}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -173,9 +183,9 @@
 	<pageFooter>
 		<band height="20" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="625941f3-e798-4a22-ae41-0622981a87f9" x="0" y="0" width="555" height="20"/>
+				<reportElement uuid="625941f3-e798-4a22-ae41-0622981a87f9" x="0" y="0" width="555" height="20" forecolor="#0000FF"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="Arial Narrow" size="14"/>
+					<font fontName="Lucida Sans" size="14" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
 				</textElement>
 				<text><![CDATA[This is simple demo report, man !!!]]></text>
 			</staticText>
